fix project paddig on buttons and spacing

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,6 +1,7 @@
 .links {
   display: flex;
   justify-content: space-evenly;
+  padding: 0.5rem;
 }
 
 
@@ -16,6 +17,7 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding: 0.5rem;
 }
 
 .text {
@@ -34,15 +36,17 @@ ul {
 }
 
 .tech {
-  padding: 10px;
+  padding: .75rem;
   border: 1px solid;
   background-color: white;
   border-radius: 999px;
 }
 
-/* .text-project {
-  margin-top: 5rem;
-} */
+.text-project {
+  font-size: 1.25rem;
+  font-weight: 300;
+  padding: 1rem;
+}
 
 .project-button {
 background-color: palegreen;
@@ -79,8 +83,8 @@ border-radius: 999px;
 
 
   .tech {
-    padding: 5px 10px; /* Reduce padding */
-    margin: 2px; /* Add small margin */
+    padding: 1rem;
+    margin: 100px; /* Add small margin */
     font-size: 0.9rem; /* Slightly smaller font */
   }
 
